# git-prole

./: Cargo.toml  LICENSE  README.md  clippy.toml  config.toml  flake.nix
.github/workflows/: ci.yml  pages.yaml  release.yaml
docs/: SUMMARY.md  book.toml  config.md  default-branch.md  install.md  introduction.md
src/: add.rs  app.rs  app_git.rs  cli.rs  clone.rs  commit_hash.rs  config.rs  convert.rs  copy_dir.rs  final_component.rs  format_bulleted_list.rs  fs.rs  gh.rs  git.rs  lib.rs  main.rs  normal_path.rs  only_paths_in_parent_directory.rs  path_display.rs  topological_sort.rs  utf8absolutize.rs  utf8tempdir.rs
src/git/: branch.rs  commit_hash.rs  commitish.rs  config.rs  git_like.rs  head_state.rs  mod.rs  path.rs  ref_name.rs  refs.rs  remote.rs  repository_url_destination.rs  status.rs  worktree.rs
src/git/refs/: branch.rs  local_branch.rs  mod.rs  name.rs  remote_branch.rs
src/git/worktree/: mod.rs  parse.rs  resolve_unique_names.rs
src/parse/: error.rs  lines.rs  mod.rs  null.rs
test-harness/: Cargo.toml
test-harness/src/: helpers.rs  lib.rs  repo_state.rs
tests/: add_branch_and_name.rs  add_branch_and_path.rs  add_branch_force.rs  add_branch_new_local.rs  add_branch_start_point_existing_local.rs  add_branch_start_point_existing_remote.rs  add_branch_start_point_new_local.rs  add_by_name_existing_local.rs  add_by_name_existing_remote.rs  add_by_name_new_local.rs  add_by_path.rs  add_by_path_existing_branch.rs  add_copy_ignored_broken_symlink.rs  add_copy_untracked_broken_symlink.rs  add_destination_exists.rs  add_detached.rs  add_detached_start_point.rs  add_from_bare_no_worktrees.rs  add_from_container.rs  add_from_container_no_default_branch.rs  add_from_non_worktree_repo.rs  add_start_point_existing_local.rs  add_start_point_existing_remote.rs  add_start_point_new_local.rs  clone.rs  clone_simple.rs  config_add_branch_replacements.rs  config_add_branch_replacements_add_by_name.rs  config_add_branch_replacements_count.rs  config_add_branch_replacements_default.rs  config_add_branch_replacements_multiple.rs  config_add_branch_replacements_path_separator.rs  config_add_commands.rs  config_add_commands_default.rs  config_add_copy_ignored.rs  config_add_copy_ignored_default.rs  config_add_copy_untracked.rs  config_add_copy_untracked_default.rs  config_branch_names.rs  config_branch_names_default.rs  (+37 more)
